nixidy/generated/prod/gatus/Service-gatus.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: gatus
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: gatus
  name: gatus
  namespace: observability
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: gatus
    app.kubernetes.io/name: gatus
  type: ClusterIP
