nixidy/generated/prod/gatus/HTTPRoute-gatus.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gatus
  namespace: observability
spec:
  hostnames:
    - gatus.trdos.me
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: gatus
          port: 80
